# open-source-mlops

./: .gitignore  Makefile  README.md  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
.github/workflows/: ci-cd.yaml
artifacts/1/0329b2b284d14275843b749648249ccf/artifacts/model/: MLmodel  conda.yaml  model.pkl  python_env.yaml
src/models/: production_model_selection.py  train_model.py
webapp/templates/: index.html
workflows/: ci-cd.yaml
